[bug] No approver subscription could not be rejected + pending subscription facade is introduced