@@ -2,30 +2,19 @@ package com.ansh.app.controller;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import com.ansh.app.facade.SubscriptionFacade;
-import com.ansh.app.service.notification.subscription.PendingSubscriptionService;
-import com.ansh.dto.NotificationStatusDTO;
+import com.ansh.app.facade.PendingSubscriptionFacade;
 import com.ansh.dto.SubscriptionRequest;
-import com.ansh.entity.account.UserProfile.AnimalInfoNotifStatus;
-import com.ansh.entity.subscription.Subscription;
-import com.ansh.notification.strategy.PendingSubscriptionServiceStrategy;
 import com.ansh.repository.entity.PendingSubscriber;
-import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.TimeUnit;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.springframework.web.context.request.async.DeferredResult;
 
 class PendingSubscriptionControllerTest {
 
@@ -34,10 +23,7 @@ class PendingSubscriptionControllerTest {
   private static final String TOPIC_ID = "animalTopicId";
 
   @Mock
-  private PendingSubscriptionServiceStrategy pendingSubscriptionServiceStrategy;
-
-  @Mock
-  private PendingSubscriptionService animalInfoPendingSubscriptionService;
+  private PendingSubscriptionFacade pendingSubscriptionFacade;
 
   @InjectMocks
   private PendingSubscriptionController pendingSubscriptionController;
@@ -52,41 +38,47 @@ class PendingSubscriptionControllerTest {
         .email(TEST_EMAIL)
         .topic(TOPIC_ID)
         .build();
-
-    when(animalInfoPendingSubscriptionService.getTopicId()).thenReturn(TOPIC_ID);
-    when(pendingSubscriptionServiceStrategy.getServiceByTopic(TOPIC_ID))
-        .thenReturn(Optional.of(animalInfoPendingSubscriptionService));
-    when(pendingSubscriptionServiceStrategy.getAllServices())
-        .thenReturn(List.of(animalInfoPendingSubscriptionService));
   }
 
   @Test
   void shouldReturnPendingSubscribers() {
+    // given
     PendingSubscriber subscriber = PendingSubscriber.builder()
         .email(TEST_EMAIL)
         .topic(TOPIC_ID)
         .build();
 
-    when(animalInfoPendingSubscriptionService.getSubscribersByApprover(APPROVER_EMAIL))
+    when(pendingSubscriptionFacade.getSubscribersByApprover(APPROVER_EMAIL))
         .thenReturn(List.of(subscriber));
 
+    // when
     List<PendingSubscriber> result = pendingSubscriptionController.getPendingSubscribers(req);
 
+    // then
     assertNotNull(result);
     assertEquals(1, result.size());
-    verify(animalInfoPendingSubscriptionService, times(1))
+    verify(pendingSubscriptionFacade, times(1))
         .getSubscribersByApprover(APPROVER_EMAIL);
-    assertEquals(subscriber, result.get(0));
+    assertEquals(subscriber, result.getFirst());
   }
 
   @Test
   void shouldReturnPendingNoApproverSubscribers() {
-    when(pendingSubscriptionServiceStrategy.getAllServices())
-        .thenReturn(Collections.emptyList());
-
+    // given
+    PendingSubscriber subscriber = PendingSubscriber.builder()
+        .email(TEST_EMAIL)
+        .topic(TOPIC_ID)
+        .build();
+    when(pendingSubscriptionFacade.getPendingSubscribersWithoutApprover())
+        .thenReturn(List.of(subscriber));
+    // when
     List<PendingSubscriber> result = pendingSubscriptionController.getPendingNoApproverSubscribers();
 
+    // then
     assertNotNull(result);
-    assertEquals(0, result.size());
+    assertEquals(1, result.size());
+    verify(pendingSubscriptionFacade, times(1))
+        .getPendingSubscribersWithoutApprover();
+    assertEquals(subscriber, result.getFirst());
   }
 }
